# cpp-sandbox

./: .dockerignore  .editorconfig  README.md
.devcontainer/: devcontainer.json
noughts-and-crosses/: CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh
noughts-and-crosses/include/: board.hpp  cell.hpp
noughts-and-crosses/src/: board.cpp  cell.cpp  main.cpp
noughts-and-crosses/tests/: CMakeLists.txt  test_board.cpp  test_cell.cpp
